--- a/views/about-goverance.ejs
+++ b/views/about-goverance.ejs
@@ -38,15 +38,72 @@
                             of business conduct and compliance with the law. These standards and principles are set out
                             in the RCF code of Business Conduct.
                             <br>
-                            Auditors : Ernst & Young, Nigeria
+                        </p>
+                        <p>
+                            <h4> Auditors : Ernst & Young, Nigeria</h4>
                             The appointment of external auditors (Ernst & Young, Nigeria) is a function of the full
-                            board on the E
+                            board on the
                             recommendation of the Audit & Risk Committee and is subject to approval by shareholders. Any
                             work to be conducted by the external auditors outside the agreed scope of the Audit is to be
                             approved by the Audit & Risk Committee.
-                            RA Policy for the rotation of external Audit engagement partners LS
+                        </p>
+                        <p>
+
+                            <h4>Policy for the rotation of external Audit engagement partners</h4>
                             RCF shall select and appoint external auditors and rotate external audit engagement partners
                             every five years.
+                        </p>
+                        <p>
+                            <h4>Risk Management, Internal Compliance & Control Systems</h4>
+                            RCF recognises that all aspects of our business involve significant risk, including both
+                            threats (downside risk) and opportunities (upside risk). We are committed to managing all
+                            sources of risk in a proactive and effective manner through competent risk management. This
+                            requires high quality risk analysis to allow appropriate management decision to be taken at
+                            all levels in the company. A number of systems are in place to identify and manage risk,
+                            these include:
+                            The identification and regular review of all significant business risk facing the company.
+                            The provision of information by management to the board, on a periodic basis, as to the
+                            status of any plans, controls, policies and/or procedures to manage the significant business
+                            risks.
+                            Guidelines for ensuring that capital expenditures and revenue commitments exceeding certain
+                            approved limits are placed before the board for approval.
+                            Limits and controls for all financial exposures, including the uses of derivatives
+                        </p>
+
+                        <p>
+                            <h4>
+                                Health, Safety & Environment
+                            </h4>
+                            The company has established a Health, safety and Environment committee to provide oversight
+                            of RCF’s health, safety and environment risks and responsibilities. Such oversight includes
+                            monitoring the following RCF’s business:
+                            The effectiveness of risk management processes employed in the areas of HSE Compliance with
+                            applicable laws, rules and regulations
+                            Promotion of continuous improvement and company culture in the areas of HSE and,
+
+
+
+                            The effectiveness of the company HSE processes, policies and standards, programs and
+                            initiatives (See RCF HSE Committee Charter)
+
+
+
+                            <ul class="list-style arrow">
+                                Others include:
+                                <li> Continuous disclosure Shares trading policy</li>
+                                <li>Board performance and appraisal process in accordance with the requirement of its
+                                    charter,
+                                    the board perform annual evaluation of its performance and sets out the goals and
+                                    objective
+                                    of the Board for the upcoming year.</li>
+                                <li>Board charter</li>
+                                <li> Audit & risk committee charter</li>
+                                <li>Remuneration committee charter</li>
+                                <li>Compliance sub-committee charter</li>
+                                <li> Schedule of board reserved matter </li>
+                                <li>Director’s conflict policy</li>
+                                <li>HSE committee charter</li>
+                            </ul>
                         </p>
 
                     </div>
@@ -73,7 +130,7 @@
                 <div class="content row">
 
                     <div class="cta-sameline">
-                        <h3>Invest with RCF Minerals limited</h3>
+                        <h4>Invest with RCF Minerals limited</h4>
                         <span class="cta-num">Call <strong><a href="tel:2348140764160">+234-814-0764-160
                                 </a></strong></span>
                     </div>
