--- a/views/about-strategy.ejs
+++ b/views/about-strategy.ejs
@@ -44,6 +44,30 @@
                             Upholding strong financial disciplines-continuing to deliver superior results and
                             maintaining our track record of paying-fully-franked dividends to shareholders.
                         </p>
+
+
+                        <h1>Implementing Our Strategy</h1>
+
+                        <p class="lead">
+                            Central to the implementing of RCF Minerals Limited strategy is:
+                        </p>
+
+                        <h4>QUALITY OF OUR WORKFORCE</h4>
+                        <p>
+                            The delivery of sustainable operations-we are highly focused on strategy and committed to
+                            strong environmental management and social responsibility
+                        </p>
+
+                        <h4>
+                            TAKING A RESPONSIBLE APPROACH TO HEDGING.
+                        </h4>
+
+                        <p>
+                            Investing in exploration technology to maximize the value of our existing assets by
+                            examining known –in-mine, near-mine and regional targets.
+                            Using exploration technology and management experience to make well-informed decisions and
+                            implements our exploration initiatives in a timely and prudent manner.
+                        </p>
                     </div>
 
                     <!-- Sidebar -->
