--- a/views/about-team.ejs
+++ b/views/about-team.ejs
@@ -38,8 +38,7 @@
                         <div class="team-profile">
                             <div class="team-member row">
                                 <div class="team-photo col-md-4 col-sm-5 col-xs-12">
-                                    <img
-                                        src="https://media.licdn.com/dms/image/C5103AQG805T8_i1noQ/profile-displayphoto-shrink_800_800/0?e=1562198400&v=beta&t=UiMgU7kssovc3DNMc_y0_2iiXVfV5hfm_ED2ivOtKcw">
+                                    <img src="/image/team/david.jpg">
                                 </div>
                                 <div class="team-info col-md-8 col-sm-7 col-xs-12">
                                     <h3 class="name">
@@ -47,7 +46,7 @@
                                             David Omafume Okoro
                                         </a>
                                     </h3>
-                                    <p class="sub-title">Lead Consultant-Managing Director/CEO</p>
+                                    <p class="sub-title">President, MD / CEO</p>
                                     <p>
                                         David Okoro has a background as a Mechanical Engineering Technologist and
                                         Environmental Resources Manager. A talented and multi-skilled individual through
@@ -118,8 +117,7 @@
                         <div class="team-profile">
                             <div class="team-member row">
                                 <div class="team-photo col-md-4 col-sm-5 col-xs-12">
-                                    <img
-                                        src="https://www.palmcityyachts.com/wp/wp-content/uploads/palmcityyachts.com/2015/09/default-profile.png">
+                                    <img src="/image/team/dickson.jpg">
                                 </div>
                                 <div class="team-info col-md-8 col-sm-7 col-xs-12">
                                     <h3 class="name"> Emeyak Dickson Akang</h3>
@@ -252,8 +250,7 @@
                         <div class="team-profile">
                             <div class="team-member row">
                                 <div class="team-photo col-md-4 col-sm-5 col-xs-12">
-                                    <img
-                                        src="https://www.palmcityyachts.com/wp/wp-content/uploads/palmcityyachts.com/2015/09/default-profile.png">
+                                    <img src="/image/team/chika.jpg">
                                 </div>
                                 <div class="team-info col-md-8 col-sm-7 col-xs-12">
                                     <h3 class="name">
@@ -283,7 +280,7 @@
                             <div class="team-member row">
                                 <div class="team-photo col-md-4 col-sm-5 col-xs-12">
                                     <img
-                                        src="https://www.palmcityyachts.com/wp/wp-content/uploads/palmcityyachts.com/2015/09/default-profile.png">
+                                        src="https://media.licdn.com/dms/image/C5603AQFfcM3rk9Q3Dw/profile-displayphoto-shrink_800_800/0?e=1565827200&v=beta&t=bRbs6iqiCpZnOgSWfC4_bujzDCOqw1js4_0OHkZADeQ">
                                 </div>
                                 <div class="team-info col-md-8 col-sm-7 col-xs-12">
                                     <h3 class="name">
@@ -414,8 +411,7 @@
                         <div class="team-profile">
                             <div class="team-member row">
                                 <div class="team-photo col-md-4 col-sm-5 col-xs-12">
-                                    <img
-                                        src="https://www.palmcityyachts.com/wp/wp-content/uploads/palmcityyachts.com/2015/09/default-profile.png">
+                                    <img src="/image/team/okoro.jpg">
                                 </div>
                                 <div class="team-info col-md-8 col-sm-7 col-xs-12">
                                     <h3 class="name">Dr. Cyril G. A. Okoro </h3>
