--- a/views/contact-page.ejs
+++ b/views/contact-page.ejs
@@ -30,8 +30,9 @@
 
                     <div class="quote-list col-md-8 res-m-bttm">
                         <div class="quote-group">
-                            <h1>Our Contact and Consultant form</h1>
-                            <p>For general Inquiry, Feedback and consultant use of Contact form</p>
+                            <h1>Contacting RCF minerals</h1>
+                            <p>For general Inquiry, Feedback and consultation please contact us either by phone or email
+                            </p>
                             <form id="contact_us" class="form-quote" action="/send" method="post">
                                 <div id="form_results" class="alert alert-success hide">
                                     <span id="message"></span>
@@ -83,7 +84,7 @@
                     <div class="contact-details col-md-4">
                         <h3>Contact Information</h3>
                         <ul class="contact-list">
-                            <li><em class="fa fa-map" aria-hidden="true"></em>
+                            <li><em class="fa fa-home" aria-hidden="true"></em>
                                 <span>14, Magbaja street, off Refinery Road,<br>
                                     off Akah Avenue, Effurun,
                                     Uvwie Local Government Area,<br>
@@ -93,7 +94,6 @@
                                 <span>
                                     <strong>Phone:</strong> +(234) 814 076 4160
                                     <br />
-                                    <strong>UK Phone</strong>: +(44) 203 355 9563
                                 </span>
                             </li>
                             <li><em class="fa fa-envelope" aria-hidden="true"></em>
