--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -23,13 +23,18 @@
             </div>
             <p></p>
             <ul class="social">
-              <li>
-                <a href="https://web.facebook.com/omafumeo"><em class="fa fa-facebook" aria-hidden="true"></em></a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/david-omafume-okoro-5ba7b3144/"><em class="fa fa-linkedin"
-                    aria-hidden="true"></em></a>
-              </li>
+              <a href="https://web.facebook.com/omafumeo">
+                <li class="btn btn-sm facebook social-btn">
+                  <em class="fa fa-facebook" aria-hidden="true"></em>
+                  facebook
+                </li>
+              </a>
+              <a href="https://www.linkedin.com/in/david-omafume-okoro-5ba7b3144/">
+                <li class="btn btn-sm linkedin social-btn">
+                  <em class="fa fa-linkedin" aria-hidden="true"></em>
+                  linkedin
+                </li>
+              </a>
             </ul>
           </div>
           <!-- End Widget -->
@@ -68,7 +73,6 @@
                 Stockwell Park Road, London,<br />
                 United Kingdom, SW9 0UH.
               </p>
-              <p><span>UK Phone</span>: +(44) 203 355 9563</p>
             </div>
           </div>
           <!-- End Widget -->
