--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,16 +8,15 @@
             <ul class="social social-s2">
                 <li><a href="https://web.facebook.com/omafumeo"><em class="fa fa-facebook" aria-hidden="true"></em></a>
                 </li>
-                <li><a href="#!"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
                 <li><a href="https://www.linkedin.com/in/david-omafume-okoro-5ba7b3144/"><em class="fa fa-linkedin"
                             aria-hidden="true"></em></a></li>
             </ul>
-            <ul class="top-contact">
+            <!-- <ul class="top-contact">
                 <li class="t-phone t-phone1">
                     <em class="fa fa-phone" aria-hidden="true"></em>
-                    <span><a href="#">+234-814-0764-160</a></span>
+                    <span><a href="tel:2348140764160">+234-814-0764-160</a></span>
                 </li>
-            </ul>
+            </ul> -->
         </div>
         <!-- #end Logo -->
         <div class="navbar-header">
@@ -29,7 +28,7 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- Q-Button for Mobile -->
-            <div class="quote-btn"><a class="btn" href="/contact-us">Enquire Today</a></div>
+            <!-- <div class="quote-btn"><a class="btn" href="/contact-us">Contact Us</a></div> -->
         </div>
         <!-- MainNav -->
         <nav class="navbar-collapse collapse" id="mainnav">
@@ -81,9 +80,9 @@
 
                 <!-- Metal Prices Page-->
                 <li><a href="/metal-prices">Metal Prices</a></li>
+                <li><a href="/contact-us">Contact us</a></li>
 
 
-                <li class="quote-btn"><a class="btn" href="/contact-us">Enquire Today</a></li>
             </ul>
         </nav>
         <!-- #end MainNav -->
