--- a/views/metal-prices.ejs
+++ b/views/metal-prices.ejs
@@ -31,7 +31,7 @@
 
                         <!-- <iframe src="" frameborder="0"></iframe> -->
                         <iframe style="width:100%; min-height: 500px;" frameborder="0" id="inlineFrameExample"
-                            title="Inline Frame Example" src="http://www.kitcometals.com/charts/Lead.html">
+                            title="Inline Frame Example" src="https://www.kitcometals.com/charts/Lead.html">
                         </iframe>
 
                     </div>
